--- a/praticeTestCourse/index.html
+++ b/praticeTestCourse/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8" />
   <title>BiblioTest - Sistema de Empréstimos</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="header">
     <div class="logo-container">
-      <img src="/logo.png" alt="Logo da BiblioTest" class="logo">
+      <img src="logo.png" alt="Logo da BiblioTest" class="logo" />
       <h1>BiblioTest</h1>
     </div>
   </div>
   <div id="app"></div>
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="src/main.js"></script>
 </body>
 </html>
